--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_orange_dark"
-
-    tools:context="com.example.android.simplecalculator.MainActivity">
+android:id="@+id/RelativeLayout"
+    tools:context="com.apprightstudio.android.simplecalculator.MainActivity">
 
     <TextView
         android:id="@+id/display"
@@ -28,21 +28,21 @@
         android:textSize="34sp" />
 
     <Button
-        android:background="#F50057"
-        android:layout_width="90dp"
-        android:layout_height="70dp"
-        android:text="DEL"
-        android:textSize="30sp"
         android:id="@+id/button"
-        android:layout_below="@+id/answer_display"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
         android:layout_alignParentEnd="true"
-        android:onClick="onClear"/>
+        android:layout_below="@+id/answer_display"
+        android:background="#F50057"
+        android:onClick="onClear"
+        android:text="@string/Delete"
+        android:textSize="30sp" />
 
     <Button
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="7"
+        android:text="@string/Seven"
         android:textSize="30sp"
         android:id="@+id/button2"
 
@@ -51,23 +51,22 @@
         android:onClick="onClickNumber"/>
 
     <Button
-        android:background="#FF1744"
-        android:layout_width="90dp"
-        android:layout_height="85dp"
-        android:text="8"
-        android:textSize="30sp"
-
         android:id="@+id/button3"
+        android:layout_width="105dp"
+        android:layout_height="85dp"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_toEndOf="@+id/button2"
+
+        android:background="#FF1744"
         android:onClick="onClickNumber"
-        android:layout_above="@+id/answer_display"
-        android:layout_alignStart="@+id/number_3"
-        android:layout_marginStart="24dp" />
+        android:text="@string/Eight"
+        android:textSize="30sp" />
 
     <Button
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="9"
+        android:text="@string/Nine"
         android:textSize="30sp"
 
         android:id="@+id/button4"
@@ -79,7 +78,7 @@
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="91.375dp"
-        android:text="4"
+        android:text="@string/Four"
         android:textSize="30sp"
 
         android:id="@+id/button5"
@@ -91,7 +90,7 @@
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="1"
+        android:text="@string/One"
         android:textSize="30sp"
 
         android:id="@+id/button6"
@@ -103,7 +102,7 @@
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="."
+        android:text="@string/point"
         android:textSize="30sp"
 
         android:id="@+id/button7"
@@ -112,46 +111,46 @@
         android:onClick="onClickNumber"/>
 
     <Button
-        android:background="#FF1744"
-        android:layout_width="90dp"
-        android:layout_height="85dp"
-        android:text="5"
-        android:textSize="30sp"
-
         android:id="@+id/button8"
+        android:layout_width="105dp"
+        android:layout_height="85dp"
         android:layout_below="@+id/button2"
         android:layout_toEndOf="@+id/button2"
-        android:onClick="onClickNumber"/>
+
+        android:background="#FF1744"
+        android:onClick="onClickNumber"
+        android:text="@string/Five"
+        android:textSize="30sp" />
 
     <Button
-        android:background="#FF1744"
-        android:layout_width="90dp"
-        android:layout_height="85dp"
-        android:text="2"
-        android:textSize="30sp"
-
         android:id="@+id/number_2"
+        android:layout_width="105dp"
+        android:layout_height="85dp"
         android:layout_below="@+id/button8"
         android:layout_toEndOf="@+id/button6"
-        android:onClick="onClickNumber"/>
+
+        android:background="#FF1744"
+        android:onClick="onClickNumber"
+        android:text="@string/Two"
+        android:textSize="30sp" />
 
     <Button
-        android:background="#FF1744"
-        android:layout_width="90dp"
-        android:layout_height="85dp"
-        android:text="0"
-        android:textSize="30sp"
-
         android:id="@+id/button10"
+        android:layout_width="105dp"
+        android:layout_height="85dp"
         android:layout_below="@+id/number_2"
         android:layout_toEndOf="@+id/button7"
-        android:onClick="onClickNumber"/>
+
+        android:background="#FF1744"
+        android:onClick="onClickNumber"
+        android:text="@string/zero"
+        android:textSize="30sp" />
 
     <Button
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="="
+        android:text="@string/Equals"
         android:textSize="30sp"
 
         android:id="@+id/button11"
@@ -163,7 +162,7 @@
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="6"
+        android:text="@string/Six"
         android:textSize="30sp"
 
         android:id="@+id/button12"
@@ -175,63 +174,62 @@
         android:background="#FF1744"
         android:layout_width="90dp"
         android:layout_height="85dp"
-        android:text="3"
+        android:text="@string/Three"
         android:textSize="30sp"
 
         android:id="@+id/number_3"
-        android:layout_below="@+id/button12"
-        android:layout_toStartOf="@+id/button"
-        android:onClick="onClickNumber"/>
+        android:onClick="onClickNumber"
+        android:layout_above="@+id/adder"
+        android:layout_toEndOf="@+id/button8" />
 
     <Button
-        android:background="#F50057"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:text="÷"
-        android:textSize="30sp"
-
         android:id="@+id/divider"
-        android:layout_below="@+id/button"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
         android:layout_alignStart="@+id/button"
-        android:onClick="onOperator"/>
+        android:layout_below="@+id/button"
 
-    <Button
         android:background="#F50057"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:text="×"
-
-        android:textSize="30sp"
-
-        android:id="@+id/multiplier"
-        android:layout_below="@+id/divider"
-        android:layout_alignParentEnd="true"
-        android:onClick="onOperator"/>
-
-    <Button
-        android:background="#F50057"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:text="-"
-        android:textSize="30sp"
-
-        android:id="@+id/subtracter"
-        android:layout_below="@+id/multiplier"
-        android:layout_alignParentEnd="true"
-        android:onClick="onOperator"/>
-
-    <Button
-        android:background="#F50057"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:text="+"
-        android:textSize="30sp"
-
-        android:id="@+id/adder"
-        android:layout_below="@+id/subtracter"
-        android:layout_toEndOf="@+id/button11"
         android:onClick="onOperator"
-        />
+        android:text="@string/Divide"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/multiplier"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+
+        android:layout_below="@+id/divider"
+
+        android:background="#F50057"
+        android:onClick="onOperator"
+        android:text="@string/Multiply"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/subtracter"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/multiplier"
+
+        android:background="#F50057"
+        android:onClick="onOperator"
+        android:text="@string/subtract"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/adder"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/subtracter"
+
+        android:background="#F50057"
+        android:onClick="onOperator"
+        android:text="@string/add"
+        android:textSize="30sp" />
 
 
 </RelativeLayout>
